applications/kubernetes/longhorn/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ingressroute
  namespace: longhorn-system
spec:
  ingressClassName: traefik-internal
  entryPoints:
  - websecure
  routes:
  - match: Host(`longhorn.kube.eggenberg.io`)
    kind: Rule
    services:
    - name: longhorn-frontend
      port: 80
  tls:
    secretName: longhorn-certificate-secret
